# havelick-solutions-invoice

./: .coverage  .gitignore  .pylintrc  CLAUDE.md  Makefile  PLANNING.md  README.md  TODO.md  database.py  generate_invoice.py  invoice_template.html  output.txt  plan.md  playwright.config.py  pyproject.toml  pytest.ini  test-invoice-data-3-31.txt  test-todo.md
.github/workflows/: ci.yml  claude.yml
application/: __init__.py  amount_utils.py  app.py  client_parser.py  date_utils.py  db.py  invoice_parser.py  models.py  routes.py  schema.sql
application/controllers/: __init__.py  customer_controller.py  generation_controller.py  invoice_controller.py  invoice_generator.py
application/static/css/: main.css
application/templates/: __init__.py  base.html  dashboard.html  invoice_template.html
tests/: conftest.py  test_invoice_playwright.py
tests/etc/: test-client.json
tests/integration/: test_cli_integration.py  test_invoice_playwright.py
tests/unit/: __init__.py  test_cli.py  test_customer.py  test_database_utils.py  test_db.py  test_generate_invoice.py  test_generate_invoice_files.py  test_helpers.py  test_import_invoice.py  test_invoice.py  test_invoice_db.py  test_invoice_item.py  test_invoice_parser.py  test_models.py  test_models_integrated.py  test_vendor.py
tests/unit/application/: test_amount_utils.py  test_date_utils.py  test_db.py  test_flask_routes.py  test_invoice_parser.py  test_models.py
tests/unit/application/controllers/: test_customer_controller.py  test_generation_controller.py  test_invoice_controller.py  test_invoice_generator.py
tests/unit/application/parsers/: test_client_parser.py
