[project]
name = "havelick-solutions-invoice"
version = "0.1.0"
description = "Invoice generator for Havelick Software Solutions"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "weasyprint>=65.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "playwright>=1.53.0",
    "pylint>=3.3.7",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-playwright>=0.7.0",
]
