[project]
name = "havelick-solutions-invoice"
version = "0.1.0"
description = "Invoice generator for Havelick Software Solutions"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "jinja2>=3.1.6",
    "weasyprint>=65.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "playwright>=1.53.0",
    "pylint>=3.3.7",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-playwright>=0.7.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.3",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "htmlcov/*",
    "playwright.config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff.lint]
# Enable additional rules for stricter checking
select = [
    "E",   # pycodestyle errors (includes E402)
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "BLE", # flake8-blind-except (catches bare except and broad exceptions)
]
